# extism-fsnotify

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  main.go
apps/inverter/: invert.wasm
apps/md2html/: README 10.21.31 AM 10.22.25 AM 10.23.35 AM 10.29.22 AM 10.38.55 AM 10.43.15 AM 10.48.53 AM 11.07.33 AM 11.10.01 AM.html  README 10.21.31 AM 10.22.25 AM 10.23.35 AM 10.29.22 AM 10.38.55 AM 10.43.15 AM 10.48.53 AM 11.07.33 AM 11.10.01 AM.md  md2html.wasm
inverter/: invert.wasm
plugins/invert/: Cargo.toml
plugins/invert/src/: lib.rs
plugins/md2html/: Cargo.toml
plugins/md2html/src/: lib.rs
