[package]
name = "invert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0-alpha.1"
extism-pdk = {path = "../../../rust-pdk"}
ril = { version = "0.4.0", features = ["png"] }
serde = { version = "1", features = ["derive"] }

[lib]
crate_type = ["cdylib"]