[package]
name = "invert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0-alpha.1"
extism-pdk = { git = "https://github.com/extism/rust-pdk", rev = "6443d91ba33e208dbb434d7d9960e7ac71ffc821" }
ril = { version = "0.9.0", features = ["png"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate_type = ["cdylib"]