[package]
name = "invert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0-alpha.1"
extism-pdk = "1.1.0"
ril = { version = "0.9.0", features = ["png"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate_type = ["cdylib"]
