[package]
name = "md2html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0-alpha.1"
extism-pdk = "0.0.1-rc.2"
pulldown-cmark = "0.9.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate_type = ["cdylib"]